# SearchBar

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  EventFilters.py  InitGui.py  LoadChangeDialog.py  LoadChangeDialog_SearchBar.py  MouseBar.py  Parameters_SearchBar.py  README.md  RefreshTools.py  Resources.py  Resources.qrc  ResultsDocument.py  ResultsRefreshTools.py  SafeViewer.py  SearchBox.py  SearchBoxLight.py  StandardFunctions_SearchBar.py  StyleMapping.py  StyleMapping_SearchBar.py  What's new.html  package.xml
Resources/: CMakeLists.txt
Resources/Changelog/: What's new.html
Resources/Icons/: CMakeLists.txt
Resources/Images/: CMakeLists.txt
Resources/ui/: CMakeLists.txt  ChangeDialog.ui  PreferencesUI_SearchBar.ui  ui_ChangeDialog.py  ui_PreferencesUI_SearchBar.py
freecad/SearchBar/: RefreshTools.py  ResultsDocument.py  ResultsPreferences.py  ResultsRefreshTools.py  ResultsToolbar.py  SearchBox.py  SearchBoxLight.py  __init__.py
freecad/Search_Bar/: BuiltInSearchResults.py  GetItemGroups.py  Parameters_SearchBar.py  SafeViewer.py  SearchBox.py  StyleMapping_SearchBar.py  init_gui.py
translations/: update_translation.sh
